# jaali

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pytest.ini
benches/: bvh_2d.rs  bvh_3d.rs  locator_2d.rs  locator_3d.rs
cuda_kernels/: locate_tets.cu  locate_triangles.cu
python_tests/: test_gpu_available.py  test_locator_2d.py  test_locator_3d.py  utils.py
src/: bvh.rs  geometry.rs  lib.rs  locator.rs  mesh.rs  python.rs  test_bvh_2d.rs  test_bvh_3d.rs
src/gpu/: cuda_stub.rs  mod.rs
tests/: locator_2d.rs  locator_3d.rs  test_bvh_2d.rs  test_bvh_3d.rs  test_gpu_available.rs  utils.rs
