[package]
name = "jaali"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]
criterion = "0.8.2"
rayon = { version = "1.11.0", optional = true }
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
numpy = "0.28"
cudarc = {version = "0.19.0",  features=["cuda-13010"], optional = true}
rand = "0.8.0"
smallvec = "1.15.1"


[features]
default = ["rayon"]
rayon = ["dep:rayon"]
python = ["pyo3"]
gpu = ["cudarc"]


[[bench]]
name = "locator_2d"
harness = false

[[bench]]
name = "locator_3d"
harness = false
